--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   },
   "dependencies": {
     "express": "~3.4.4",
-    "lodash": "^4.0.0"
+    "lodash": "^4.0.0",
+    "unirest": "^0.4.2"
   },
   "devDependencies": {},
   "bundleDependencies": [],
