--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "express": "~3.4.4",
+    "jade": "^1.11.0",
     "lodash": "^4.0.0",
     "unirest": "^0.4.2"
   },
