--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "~3.4.4",
     "jade": "^1.11.0",
     "lodash": "^4.0.0",
+    "moment-timezone": "^0.5.0",
     "unirest": "^0.4.2"
   },
   "devDependencies": {},
