--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "npm": ">= 1.0.0"
   },
   "dependencies": {
+    "body-parser": "^1.14.2",
     "express": "~3.4.4",
     "jade": "^1.11.0",
     "lodash": "^4.0.0",
