--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "jade": "^1.11.0",
     "lodash": "^4.0.0",
     "moment-timezone": "^0.5.0",
-    "unirest": "^0.4.2"
+    "unirest": "^0.4.2",
+    "url-parse": "^1.0.5"
   },
   "devDependencies": {},
   "bundleDependencies": [],
