--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "js-priority-queue": "^0.1.3",
     "lodash": "^4.0.0",
     "moment-timezone": "^0.5.0",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.0",
     "pg": "^4.4.4",
     "unirest": "^0.4.2",
     "url-parse": "^1.0.5"
