--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "passport-facebook": "^2.1.0",
     "pg": "^4.4.4",
     "unirest": "^0.4.2",
-    "url-parse": "^1.0.5"
+    "url-parse": "^1.0.5",
+    "utf8": "^2.1.1"
   },
   "devDependencies": {},
   "bundleDependencies": [],
