--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "body-parser": "^1.14.2",
     "express": "~3.4.4",
     "jade": "^1.11.0",
+    "job_scheduler": "^1.0.1",
     "js-priority-queue": "^0.1.3",
     "lodash": "^4.0.0",
     "moment-timezone": "^0.5.0",
