--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "body-parser": "^1.14.2",
+    "cron": "^1.1.0",
     "express": "~3.4.4",
     "jade": "^1.11.0",
     "job_scheduler": "^1.0.1",
