--- a/package.json
+++ b/package.json
@@ -21,17 +21,19 @@
     "npm": ">= 1.0.0"
   },
   "dependencies": {
-    "body-parser": "^1.14.2",
+    "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.3",
     "cron": "^1.1.0",
-    "express": "~3.4.4",
+    "cryptr": "^2.0.0",
+    "express": "^4.13.3",
     "jade": "^1.11.0",
-    "job_scheduler": "^1.0.1",
+    "job_scheduler": "^1.0.3",
     "js-priority-queue": "^0.1.3",
     "lodash": "^4.13.1",
-    "moment-timezone": "^0.5.0",
+    "moment-timezone": "^0.5.4",
     "passport": "^0.3.2",
-    "passport-facebook": "^2.1.0",
-    "pg": "^4.4.4",
+    "passport-facebook": "^2.1.1",
+    "pg": "^4.5.6",
     "unirest": "^0.4.2",
     "url-parse": "^1.0.5",
     "utf8": "^2.1.1"
