[Prasun] creating pages using bootstrap. Till now landing page is created

--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "url-parse": "^1.0.5",
     "utf8": "^2.1.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "consolidate": "^0.14.1"
+  },
   "bundleDependencies": [],
   "private": true,
   "main": "server.js"
